<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">noticer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="start">Start testing</string>
	<string name="stop">Stop testing</string>
	<string name="startservice">Stop service</string>
	<string name="stopservice">Start service</string>
	<string name="showtray">Show on tray</string>
	<string name="autoboot">Start on boot</string>
	<string name="confsms">SMS</string>
	<string name="confcall">Call</string>
</resources>
