<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NoticeSetting" >

	<ToggleButton
	    android:id="@+id/toggleButton1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:onClick="onClickStartStopService"
	    android:text="@string/startservice"
	    android:textColorLink="@color/Green"
	    android:textOff="@string/stopservice"
	    android:textOn="@string/startservice" />

	<Button
	    android:id="@+id/btnStart"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/toggleButton1"
	    android:layout_below="@+id/toggleButton1"
	    android:layout_marginTop="14dp"
	    android:onClick="onClickStart"
	    android:text="@string/start" />

	<Button
	    android:id="@+id/btnStop"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/btnStart"
	    android:layout_alignBottom="@+id/btnStart"
	    android:layout_alignRight="@+id/toggleButton1"
	    android:onClick="onClickStop"
	    android:text="@string/stop" />

	<CheckBox
	    android:id="@+id/autoboot"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/btnStart"
	    android:layout_below="@+id/btnStart"
	    android:layout_marginTop="24dp"
	    android:onClick="onClickConfigAutoBoot"
	    android:text="@string/autoboot" />
	
	<CheckBox
	    android:id="@+id/confsms"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/autoboot"
	    android:layout_below="@+id/autoboot"
	    android:layout_marginTop="24dp"
	    android:onClick="onClickConfigSms"
	    android:text="@string/confsms" />
	
	<CheckBox
	    android:id="@+id/confcall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/confsms"
	    android:layout_below="@+id/confsms"
	    android:layout_marginTop="24dp"
	    android:onClick="onClickConfigCall"
	    android:text="@string/confcall" />

</RelativeLayout>
